# TiebaTS

./: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle  build.gradle.kts  gm.jks.base64.txt  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Purge.js  PurgeFrsBottom.js  classes.dex  native_init  xposed_init
app/src/main/cpp/: CMakeLists.txt  crust.cpp  crust.h  main.c  main.h
app/src/main/cpp/check/: access.c  anti-xposed.c  anti-xposed.h  art.h  check.c  check.h  classloader.cpp  classloader.h  hash.c  hash.h  inline.c  inline.h  main.c  native.c  native.h  path.c  path.h  plt.c
app/src/main/cpp/hide/: hide.cpp  hide.h
app/src/main/java/gm/tieba/tabswitch/: BaseHooker.java  Constants.kt  Hook.java  HookDispatcher.java  IHooker.java  RulesDbHelper.java  XposedContext.java  XposedContext.kt  XposedInit.java  XposedInit.kt  XposedWrapper.java
app/src/main/java/gm/tieba/tabswitch/dao/: AcRule.kt  AcRules.java  AcRules.kt  Adp.java  Adp.kt  Preferences.java  Preferences.kt  Rule.java  RulesDbHelper.java
app/src/main/java/gm/tieba/tabswitch/hookImpl/: AntiConfusion.java  AntiConfusionHelper.java  AutoSign.java  AutoSignHelper.java  ContentFilter.java  CreateView.java  EyeshieldMode.java  FontSize.java  ForbidGesture.java  HistoryCache.java  HomeRecommend.java  MyAttention.java  NewSub.java  OriginSrc.java  PersonalizedFilter.java  Purify.java  (+8 more)
app/src/main/java/org/jf/dexlib/: AnnotationDirectoryItem.java  AnnotationItem.java  AnnotationSetItem.java  AnnotationSetRefList.java  AnnotationVisibility.java  ClassDataItem.java  ClassDefItem.java  CodeItem.java  DexFile.java  FieldIdItem.java  HeaderItem.java  IndexedSection.java  Item.java  ItemType.java  MethodIdItem.java  OdexHeader.java  OffsettedSection.java  ProtoIdItem.java  ReadContext.java  Section.java  StringDataItem.java  StringIdItem.java  TypeIdItem.java  TypeListItem.java
app/src/main/java/org/jf/util/: ByteRenderer2.java  IndentingWriter2.java  JavaParser.java  LiteralTools2.java  LongRenderer2.java  Parser.java
app/src/main/java/top/srcrs/: Run.java
app/src/main/java/top/srcrs/domain/: Cookie.java
app/src/main/java/top/srcrs/util/: Encryption.java  Request.java
app/src/main/res/drawable/: ic_donation.xml  ic_github.xml  ic_modules.xml  ic_telegram_2019_logo.xml  item_background_button.xml  item_background_round.xml  launch_screen.xml  line.xml  tv_license_item.xml
app/src/main/res/drawable-night/: launch_screen.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_donation.xml  activity_license.xml  activity_main.xml  adapter_item_license.xml  adapter_item_module_list.xml
app/src/main/res/layout-night/: activity_donation.xml  activity_license.xml  activity_main.xml  adapter_item_license.xml  adapter_item_module_list.xml
app/src/main/res/values/: arrays.xml  colors.xml  colors_material.xml  matchers.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-night-v27/: themes.xml
app/src/main/res/values-v27/: themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/wrapper/: gradle-wrapper.properties
(+214 files in other folders)
